# OM1-A

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  env.example  pyproject.toml  requirements.txt  setup.py  test_asr.py
.github/workflows/: installation.yml  integration-tests.yml  lint.yml  release.yml  test.yml
OM1-avatar/: README.md
avatar/: webcam_safe.py
config/: conversation.json5  spot.json5  twitter.json5  ubtech_yanshee.json5  unitree_go2_autonomy_advance.json5  unitree_go2_modes.json5  yolo.json5
demos/: isaac_gym_demo.py
docs/: asr_multi_language_report.md
docs/developing/: 0_introduction.mdx  1_get-started.mdx  2_architecture.mdx  3_configuration.mdx  4_inputs.mdx  5_llms.mdx
docs/examples/: conversation.mdx  gazebo.mdx
docs/full_autonomy_guidelines/: architecture_overview.mdx  brainpack_introduction.mdx  lifecycle.mdx  mode_selection.mdx  modes.mdx  om.mdx  om1_video_processor.mdx  pre_config.mdx
docs/robotics/: gps_compass.mdx  (+13 more)
gazebo/: run_gazebo.sh
mintlify/: docs.json  mintlify_splash.mdx  styles.css
om1_isaac/: pyproject.toml
om1_isaac/om1_isaac/: bridge.py
scripts/: mintlify.sh
spot/: ros2_node.py
src/: cli.py  run.py
system_hw_test/: ble.py  go2_data_stream.py  go2_lidar.py  go2_state.py  om_audio_remote_input.py  om_keyboard_remote_control.py  parse_crsf_radio.py  rpdriver.py  rptest.py  simple_paths.py  teleops.html  test_audio_mac.py  turtlebot4_battery.py  turtlebot4_camera_opencv.py  turtlebot4_keyboard_movement.py  yolo.py
tests/: ci_placeholder.py
websim/: debug.py  test_debug.py
(+352 files in other folders)
