[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "om1"
version = "0.1.0"
description = "OpenMind OM1 - Modular AI Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "OpenMind", email = "contact@openmind.ai"}]
dependencies = [
    "torch>=2.0.0",
    "opencv-python>=4.8.0",
    "ruff>=0.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "eth-account>=0.8.0",
]

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
line-length = 100

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration",
    "ubtech: mark test requiring ubtech SDK",
]
addopts = "-ra -q"
